--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,21 @@
 server:
   port: 8080
+  error:
+    include-stacktrace: on_param
+
+logging:
+  level:
+    web: debug
+
+spring:
+  application:
+    name: inaluma-makeup
+  datasource:
+    url: jdbc:mysql://localhost:3306/inaluma_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sslMode=DISABLED&useTimezone=true&serverTimezone=Africa/Luanda
+    username: inaluma
+    password: password
+
+  jpa:
+    open-in-view: false
+    hibernate:
+      ddl-auto: update
