springdoc-openapi dependency for API Docs has been added to pom

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!--Documentation library : Begin-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<!--Documentation library : End-->
+
 	</dependencies>
 
 	<build>
