--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>Inaluma</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
